--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -158,15 +158,32 @@ footer {
 }
 
 .participants-list {
-  list-style-type: disc;
-  margin-left: 20px;
+  list-style-type: none;
+  margin-left: 0;
   margin-bottom: 0;
   color: #3949ab;
   font-size: 15px;
+  padding-left: 0;
 }
 
-.no-participants {
-  color: #888;
-  font-style: italic;
-  margin-left: 5px;
+.participants-list li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 4px;
+}
+
+.delete-participant {
+  background: none;
+  border: none;
+  color: #c62828;
+  font-size: 18px;
+  cursor: pointer;
+  margin-left: 8px;
+  padding: 0;
+  line-height: 1;
+}
+
+.delete-participant:hover {
+  color: #a31515;
 }
